--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,4 +22,7 @@ Imports:
 RoxygenNote: 6.1.1
 Suggests: 
     testthat (>= 2.1.0),
-    roxygen2
+    roxygen2,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
