--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,5 @@
 destination: docs
+URL: https://subugoe.github.io/openairegraph/ , https://github.com/subugoe/openairegraph
 template:
   params:
     bootswatch: cosmo
