--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -2,12 +2,14 @@
 ^\.Rproj\.user$
 ^LICENSE.md$
 ^README\.Rmd$
-^CODE_OF_CONDUCT\.md$
 ^\.travis\.yml$
 ^_pkgdown\.yml$
 ^docs$
 ^pkgdown$
-^doc$
 ^Meta$
-^vignettes/intro_h2020$
+deps/
 ^codecov\.yml$
+^\.github$
+^vignettes/
+^Dockerfile
+data/
