--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,27 @@
 Package: openairegraph
-Type: Package
 Title: Read and manipulate the OpenAIRE Research Graph Dump
-Version: 0.0.1
-Authors@R: c(
-    person(
-    "Najko", "Jahn", 
-    role = c("aut", "cre"), 
-    email = "najko.jahn@gmail.com",
-    comment = c(ORCID = "0000-0001-5105-1463")
-    ))
+Version: 0.0.1.9000
+Authors@R: 
+    c(
+      person(
+        given = "Najko",
+        family = "Jahn",
+        role = c("aut", "cre"),
+        email = "najko.jahn@gmail.com",
+        comment = c(ORCID = "0000-0001-5105-1463")
+      ),
+      person(
+        given = "Maximilian",
+        family = "Held",
+        role = c("ctb"),
+        email = "info@maxheld.de",
+        comment = c(ORCID = "0000-0002-4703-5388")
+      ),
+      person(
+        given = "Göttingen State and University Library",
+        role = c("cph", "fnd")
+      )
+    )
 Description: Helper functions to obtain and manipualte data from the OpenAIRE Research Graph 
     Dumps <https://api.openaire.eu/graph-dumps.html>. 
     This package focuses on research results funded by EC framework programme HORIZON 2020. 
@@ -18,28 +31,31 @@ BugReports: https://github.com/subugoe/openairegraph/issues
 Encoding: UTF-8
 LazyData: true
 Imports: 
-    xml2,
-    jsonlite,
-    tibble,
-    purrr,
-    progress,
-    base64enc,
-    dplyr,
-    methods
-RoxygenNote: 6.1.1
+    xml2 (>= 1.3.1.9000),
+    jsonlite (>= 1.6.1),
+    tibble (>= 3.0.1),
+    purrr (>= 0.3.4),
+    progress (>= 1.2.2),
+    base64enc (>= 0.1.3),
+    dplyr (>= 0.8.5),
+    methods (>= 3.6.3)
+RoxygenNote: 7.1.0
 Suggests: 
     testthat (>= 2.1.0),
-    remotes,
-    future,
-    future.apply,
-    tictoc,
-    tidyr,
-    cowplot,
-    scales,
-    ggplot2,
-    plotly,
-    roxygen2,
-    knitr,
-    rmarkdown,
-    covr
+    future (>= 1.17.0),
+    future.apply (>= 1.5.0),
+    tictoc (>= 1.0),
+    tidyr (>= 1.0.2),
+    cowplot (>= 1.0.0),
+    scales (>= 1.1.0),
+    ggplot2 (>= 3.3.0),
+    plotly (>= 4.9.2.1),
+    roxygen2 (>= 7.1.0),
+    knitr (>= 1.28),
+    rmarkdown (>= 2.1),
+    covr (>= 3.5.0),
+    metaR (>= 0.0.0.9000),
+    remotes (>= 2.1.1)
 VignetteBuilder: knitr
+Remotes: 
+    subugoe/metaR@5543b34c49b339c8e91217912d07662415384cbe
