--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,7 +56,8 @@ Suggests:
     covr (>= 3.5.0),
     metaR (>= 0.0.0.9000),
     remotes (>= 2.1.1),
-    pkgdown (>= 1.5.1.9000)
+    pkgdown (>= 1.5.1.9000),
+    rcmdcheck (>= 1.3.3)
 VignetteBuilder: knitr
 Remotes: 
     subugoe/metaR@5543b34c49b339c8e91217912d07662415384cbe
