--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,7 @@ Imports:
     progress (>= 1.2.2),
     base64enc (>= 0.1.3),
     dplyr (>= 0.8.5),
-    methods (>= 3.6.3)
+    methods (>= 3.6.2)
 RoxygenNote: 7.1.0
 Suggests: 
     testthat (>= 2.1.0),
@@ -56,8 +56,9 @@ Suggests:
     covr (>= 3.5.0),
     metaR (>= 0.0.0.9000),
     remotes (>= 2.1.1),
-    pkgdown (>= 1.5.1),
-    rcmdcheck (>= 1.3.3)
+    pkgdown (>= 1.5.0),
+    rcmdcheck (>= 1.3.3),
+    bookdown (>= 0.18)
 VignetteBuilder: knitr
 Remotes: 
     subugoe/metaR@5543b34c49b339c8e91217912d07662415384cbe
