--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,7 +58,8 @@ Suggests:
     remotes (>= 2.1.1),
     pkgdown (>= 1.5.0),
     rcmdcheck (>= 1.3.3),
-    bookdown (>= 0.18)
+    bookdown (>= 0.18),
+    tidyverse (>= 1.3.0)
 VignetteBuilder: knitr
 Remotes: 
     subugoe/metaR@5543b34c49b339c8e91217912d07662415384cbe
