reduce imports, cleanup for #2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,4 @@ export(oarg_linked_affiliations)
 export(oarg_linked_ftxt)
 export(oarg_linked_projects)
 export(oarg_publications_md)
-importFrom(base64enc,base64decode)
-importFrom(dplyr,bind_rows)
-importFrom(methods,is)
-importFrom(progress,progress_bar)
-importFrom(purrr,map_df)
-importFrom(purrr,pmap)
-importFrom(tibble,tibble)
-importFrom(xml2,xml_find_all)
-importFrom(xml2,xml_find_first)
-importFrom(xml2,xml_text)
+import(xml2)
