--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,7 +37,8 @@ Imports:
     purrr (>= 0.3.4),
     progress (>= 1.2.2),
     base64enc (>= 0.1.3),
-    dplyr (>= 0.8.5)
+    dplyr (>= 0.8.5),
+    methods (>= 3.6.3)
 RoxygenNote: 7.1.0
 Suggests: 
     testthat (>= 2.1.0),
