--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -16,11 +16,9 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - { os: windows-latest, r: "3.6" }
-          - { os: windows-latest, r: "4.0" }
-          - { os: macOS-latest, r: "3.6" }
-          - { os: macOS-latest, r: "4.0" }
           - { os: macOS-latest, r: "devel" }
+          - { os: macOS-latest, r: "4.0" }
+          - { os: windows-latest, r: "4.0" }
           - {
               os: ubuntu-16.04,
               r: "3.6",
@@ -75,6 +73,11 @@ jobs:
       - name: Check
         run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "warning", check_dir = "check")
         shell: Rscript {0}
+
+      - name: Show testthat output
+        if: always()
+        run: find check -name 'testthat.Rout*' -exec cat '{}' \; || true
+        shell: bash
 
       - name: Upload check results
         if: failure()
