Revert "deploy from branch"
This reverts commit 781b629ea4698f7fd08faf1e1ff89d1de72bf4f1.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -71,6 +71,7 @@ jobs:
         run: pkgdown::build_site()
         shell: Rscript {0}
       - name: Deploy to GitHub Pages
+        if: github.ref == 'refs/heads/master'
         uses: maxheld83/ghpages@github-token
         env:
           BUILD_DIR: docs
