--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -11,7 +11,7 @@ authors:
   Göttingen State and University Library:
     href: https://www.sub.uni-goettingen.de/
 template:
-  package: metaR
+  package: metar
   opengraph:
     twitter:
       site: "@subugoe"
